* implement -u user and -g group - to specify the username and/or   group to run as.   if -u isn't given, user defaults to "nobody".   if -g isn't given, group defaults to the primary group of user.   doesn't try and change uid or gid if they're already set ok.   should solve PR 4218. * deprecate register * deprecate trailing \n in syslog messages